# api/v1/category/request/update_category.go
@@ -1,0 +1,16 @@
+package request
+
+import "go-hexagonal/business/category"
+
+type UpdateCategoryRequest struct {
+	Name string `json:"name"`
+}
+
+func (req *UpdateCategoryRequest) ToUpsertCategorySpec() *category.UpdateCategorySpec {
+
+	var uodateCategorySpec category.UpdateCategorySpec
+
+	uodateCategorySpec.Name = req.Name
+
+	return &uodateCategorySpec
+}
