# business/product/swagger-product.yaml
@@ -20,6 +20,46 @@ schemes:
 - "http"
 paths:
   /product:
+    get:
+      tags:
+      - "product"
+      summary: "Find All product"
+      description: "Returns a all product"
+      operationId: "getAllProduct"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "name"
+        in: "query"
+        description: "Product name to filter by"
+        required: false
+        type: "string"
+      - name: "category"
+        in: "query"
+        description: "Category to filter by"
+        required: false
+        type: "integer"
+      - name: "page"
+        in: "query"
+        description: "Page to filter by"
+        required: false
+        type: "string"
+      - name: "row_per_page"
+        in: "query"
+        description: "Amount item per page"
+        required: false
+        type: "string"
+      responses:
+        "200":
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Product"
+        "400":
+          description: "Invalid ID supplied"
+        "404":
+          description: "Product not found"
+      security:
+      - api_key: []
     post:
       tags:
       - "product"
@@ -48,74 +88,6 @@ paths:
       - productstore_auth:
         - "write:product"
         - "read:product"
-  /product/findByCategory:
-    get:
-      tags:
-      - "product"
-      summary: "Finds Products by category"
-      description: "Multiple category values can be provided with comma separated strings"
-      operationId: "findProductsBycategory"
-      produces:
-      - "application/json"
-      parameters:
-      - name: "category"
-        in: "query"
-        description: "category values that need to be considered for filter"
-        required: true
-        type: "array"
-        items:
-          type: "string"
-          # enum:
-          # - "available"
-          # - "pending"
-          # - "sold"
-          default: "available"
-        collectionFormat: "multi"
-      responses:
-        "200":
-          description: "successful operation"
-          schema:
-            type: "array"
-            items:
-              $ref: "#/definitions/Product"
-        "400":
-          description: "Invalid category value"
-      security:
-      - productstore_auth:
-        - "write:products"
-        - "read:products"
-  /product/findByName:
-    get:
-      tags:
-      - "product"
-      summary: "Finds Products by name"
-      description: "Muliple name can be provided with comma separated strings. Use name1, name2, name3 for testing."
-      operationId: "findProductsByName"
-      produces:
-      - "application/json"
-      parameters:
-      - name: "name"
-        in: "query"
-        description: "Name to filter by"
-        required: true
-        type: "array"
-        items:
-          type: "string"
-        collectionFormat: "multi"
-      responses:
-        "200":
-          description: "successful operation"
-          schema:
-            type: "array"
-            items:
-              $ref: "#/definitions/Product"
-        "400":
-          description: "Invalid tag value"
-      security:
-      - productstore_auth:
-        - "write:products"
-        - "read:products"
-      deprecated: false
   /product/{productId}:
     get:
       tags:
